<resources>
    <string name="app_name">Josh BB App</string>
    <string name="follow">Follow</string>
    <string name="request">Request Room</string>
    <string name="following">Following</string>
    <string name="set_reminder">Set reminder</string>
    <string name="reminder_on">Reminder set</string>
    <string name="upcoming_rooms">List Of Calls</string>
    <string name="join_now">Join this room</string>
    <string name="play_now">Replay call</string>
    <string name="log_out">Log Out</string>
    <string name="full_name_prompt">What’s your full name?</string>
    <string name="real_name_text">People use their real name on BB App</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="signup_with_prompt">Sign in with your phone #</string>
    <string name="privacy_policy_text">By entering your number, you’re agreeing to our Terms of\n Service and Privacy Policy. Thanks!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_welcome">By continuing, you’re agreeing to our Terms of\n Service and Privacy Policy.</string>
    <string name="country_code">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_otp_prompt">Please verify your OTP</string>
    <string name="verify_otp_for_phone_text">Enter the OTP your received on \n+91 %s</string>
    <string name="skip">Skip</string>
    <string name="add_profile_photo_prompt">Add a profile photo!</string>
    <string name="raised_hand">Raised Hands</string>
    <string name="please_enter_valid_number">Please enter a valid mobile number!</string>
    <string name="plz_wait">Please wait&#8230;</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="wrong_otp">The OTP entered is incorrect. Please enter correct OTP or try regenerating the OTP</string>
    <!--Time Utils class-->
    <string name="time_ago_now">few moments ago</string>
    <string name="time_ago_full_seconds">%1$d seconds ago</string>
    <string name="time_ago_full_minute">%1$d minute ago</string>
    <string name="time_ago_full_minutes">%1$d minutes ago</string>
    <string name="time_ago_full_hour">%1$d hour ago</string>
    <string name="time_ago_full_hours">%1$d hours ago</string>
    <string name="time_ago_full_days">%1$d days ago</string>
    <string name="time_ago_full_month">%1$d month ago</string>
    <string name="time_ago_full_months">%1$d months ago</string>
    <string name="time_ago_seconds">%1$d sec ago</string>
    <string name="time_ago_minute">%1$d min ago</string>
    <string name="time_ago_minutes">%1$d min ago</string>
    <string name="time_ago_hour">%1$d h ago</string>
    <string name="time_ago_hours">%1$d h ago</string>
    <string name="time_ago_yesterday_at">Yesterday at %1$s</string>
    <string name="time_ago_days">%1$d d ago</string>
    <string name="time_ago_month">%1$d m ago</string>
    <string name="time_ago_months">%1$d m ago</string>
    <string name="empty_name">First name or last name cannot be empty!</string>
    <string name="profile_photo">Profile photo</string>
    <string name="full_name_concatenated">%s %s</string>
    <string name="start_a_room">Start a room</string>
    <string name="continue_label">Continue</string>
    <string name="create_your_room">Create your Room</string>
    <string name="name_your_room">Name your Room</string>
    <string name="start_room">Start Room</string>
    <string name="retry">Retry</string>

    <string name="hallway">Hallway</string>
    <string name="all_rooms">All rooms</string>
    <string name="speakers">Speakers</string>
    <string name="audience">Others in the room</string>
    <string name="finding_conversation_partner">Finding Conversation Partners</string>

    <string name="something_went_wrong">Oops! Something Went Wrong</string>
    <string name="internet_not_available_msz">Seems like your Internet is too slow or not available.</string>
    <string name="room_title">Join Conversation Room</string>
    <string name="join">Join</string>
    <string name="dismiss">Dismiss</string>
    <string name="convo_notification_title">%1s has started a conversation about %1s</string>
    <string name="end_room">End Room</string>
    <string name="leave_room_button">Leave Room</string>
    <string name="storage_permission_message">To view or send media, allow Bade Bhaiya App  access to your device\'s  photos, media and files.</string>
    <string name="record_permission_message">To record a Voice Message, allow Bade Bhaiya App  access to your microphone and your device\'s  photos, media and files. Tap Settings > Permissions, and turn Microphone on and Storage on.</string>
    <string name="camera_permission_message">To capture photos and videos allow Bade Bhaiya App access to your camera  and your device\'s  photos, media and files.</string>
    <string name="settings">Settings</string>
    <string name="not_now">Not Now</string>
    <string name="call_start_permission_message_rational">To start speaking practice, please allow permissions for location, making calls, storage and microphone.</string>
    <string name="call_start_permission_message">To start speaking practice, please allow permissions. Tap Settings > Permissions, and turn Microphone on and Storage on and Location on and Phone on.</string>
    <string name="convo_room_start_permission_message">To enter/start room practice, please allow permissions. Tap Settings > Permissions, and turn Microphone on and Storage on and Location on and Phone on.</string>
    <string name="demo_call_start_permission_message">To start speaking practice, please allow permissions. Tap Settings > Permissions, and turn Microphone on and Storage on and Phone on.</string>
    <string name="alert_end_room_title">Are you sure, you want to end this room for everyone</string>
    <string name="alert_leave_room_title">Are you sure, you want to leave this room</string>
    <string name="cancel">Cancel</string>
    <string name="leave_room">Leave quietly</string>
    <string name="generic_message_for_error">An error occurred, please try again!</string>
    <string name="decline">Decline</string>
    <string name="answer">Answer</string>
    <string name="join_conversation">Join Conversation</string>
    <string name="view_full_profile">View full profile</string>
    <string name="move_to_audience">Move to audience</string>
    <string name="move_to_speaker">Move to speaker</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="open_to_everyone">Open to Everyone</string>
    <string name="no_raised_hand_text">No one has their hand raised yet</string>
    <string name="bb_following"><![CDATA[\<b>%s</b> following\]]></string>
    <string name="bb_followers"><![CDATA[\<b>%s fans</b>\]]></string>
    <string name="bb_calls"><![CDATA[\<b>%s rooms</b>\]]></string>
    <string name="welcome_in_string">🎉 Welcome in!</string>
    <string name="bb_tagline">Connect with your Favorite Josh Talks Speakers</string>
    <string name="unable_to_load">Unable to load, Please try again</string>
    <string name="room_card_top_title_header">%s… %s at %s</string>
    <string name="schedule_your_room">Schedule your Room</string>
    <string name="schedule_room">Schedule Room</string>
    <string name="date_time_separator">T</string>
    <string name="enter_topic_name">Please enter topic</string>
    <string name="auto_logout_message">"You have been logged out from this device, because you have logged in from another device."</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_room_notification_title">%1$s started a call</string>
    <string name="speak_with_them">%1$s. Speak with them?</string>
    <string name="reminder_for_your_call">Reminder for your scheduled call</string>
    <string name="your_call_will_start_in">Your call will start in %1$s</string>
    <string name="title_activity_people_to_follow">PeopleToFollowActivity</string>
    <string name="badebhaiyas_to_follow">BADE BHAIYAS TO FOLLOW</string>
    <string name="reminder_notification_body_for_listener">Call par judkar unse apne sawaal puchen</string>
    <string name="speakers_call_starts_in">%1$s’s call starts in %2$s</string>
    <string name="force_update_notice">अपने Experience को बेहतर करने के लिए Josh BB App का Latest Version Download करें</string>
    <string name="download_now">DOWNLOAD NOW</string>
    <string name="exit">EXIT</string>
    <string name="title_activity_waiting_room">WaitingRoom</string>
    <string name="waiting_room_dialog_title">कॉल पर जुड़ने के लिए आपका धन्यवाद, कृपया थोड़ी प्रतीक्षा करें. जोश Speaker %1$s बहुत जल्द हमारे साथ जुड़ेंगे</string>
    <string name="sure_ill_wait">SURE, I LL WAIT</string>
    <string name="exit_room">EXIT ROOM</string>
    <string name="update_now">Update Now</string>
    <string name="your_call_crack_upsc_is_still_live_do_you_want_to_end_that_call">Your call ‘%1$s’ is still Live. Do you want to end that call?</string>
    <string name="sure_i_ll_rejoin">SURE, I\'LL REJOIN</string>
    <string name="end_call">END CALL</string>
    <string name="you_can_also_rejoin_your_previous_call_instead_of_starting_a_new_one">You can also rejoin your previous call instead of starting a new one.</string>
    <string name="call_requests">Room Requests</string>
    <string name="please_leave_current_room">Please Leave Current Room</string>
    <string name="no_call_request">You do not have any call requests yet</string>
    <string name="recorded_room">recorded_room</string>
    <string name="recorded_room_channel_description">To control recorded room streaming</string>
    <string name="request_title">आपकी Life की कौन-सी Problem मेरे से बात करके Solve हो सकती है?</string>
    <string name="submit">SUBMIT</string>
    <string name="request_hint">Write Here</string>

</resources>