<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_app_color">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEnterNamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_prompt"
            android:textAppearance="@style/BB_Typography_Nunito_Regular"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_44sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/first"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textAppearance="@style/BB_Typography_Nunito_Sans_Regular"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.9635316699"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterNamePrompt"
            app:layout_constraintVertical_bias="0.4" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/last"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textAppearance="@style/BB_Typography_Nunito_Sans_Regular"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0364683301"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvFirstName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_name_text"
            android:gravity="center"
            android:textSize="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_6sdp"
            android:textAppearance="@style/BB_Typography_Nunito_Sans_Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/next_button_selector"
            android:text="@string/next"
            android:textSize="@dimen/_17ssp"
            android:paddingHorizontal="@dimen/_50sdp"
            android:textAppearance="@style/BB_Typography_Nunito_Sans_Regular"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_46sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>