<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_270sdp"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"

    android:background="@drawable/round_rectangle_for_clubhouse_images">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center"
        android:text="@string/request_title"
        android:textAppearance="@style/BB_Typography_Nunito_Sans_Bold"
        android:textSize="@dimen/_14ssp"
        android:textColor="#1E1D1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="#EDEFF2"
        android:gravity="top"
        android:hint="@string/request_hint"
        android:padding="@dimen/_7sdp"
        android:textAppearance="@style/BB_Typography_Nunito_Sans_Regular"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/submit"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@drawable/request_button_selector"
        android:elevation="@dimen/_3sdp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/submit"
        android:textAppearance="@style/BB_Typography_Nunito_Sans_Regular"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>