<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottomsheet"
    android:paddingBottom="@dimen/_40sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_photo"
        android:layout_width="@dimen/_86sdp"
        android:layout_height="@dimen/_86sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_call_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:textAppearance="@style/TextAppearance.JoshTypography.Heading_H4_Semi_Bold"
        android:textColor="@color/pure_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_photo"
        tools:text="Vedant Maheswari" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/open_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rect_round"
        android:backgroundTint="#F2F2F2"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/view_full_profile"
        android:textAppearance="@style/TextAppearance.JoshTypography.Body_Text_Small_Semi_Bold"
        android:textColor="#1E1D1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/move_to_audience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rect_round"
        android:backgroundTint="#F2F2F2"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/move_to_audience"
        android:textAppearance="@style/TextAppearance.JoshTypography.Body_Text_Small_Semi_Bold"
        android:textColor="#1E1D1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_user_profile" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/move_to_speaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rect_round"
        android:backgroundTint="#F2F2F2"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/move_to_speaker"
        android:textAppearance="@style/TextAppearance.JoshTypography.Body_Text_Small_Semi_Bold"
        android:textColor="#1E1D1B"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/move_to_audience" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/ic_cross"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:rippleColor="@color/transparent_black" />

</androidx.constraintlayout.widget.ConstraintLayout>